# pdm-fabric

./: .editorconfig  .gitignore  .style.yapf  .yapfignore  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
pdm_fabric/: main.py
