[project]
name = "pdm-fabric"
version = "0.0.1"
description = "pdm shortcuts for Fabric projects"
authors = [
    {name = "Abdul Hamid", email = "abdulachik@icloud.com"},
]
dependencies = []
requires-python = ">=3.7"
license = {text = "MIT"}
readme = "README.md"

[project.urls]
homepage = "https://github.com/sicksid/pdm-fabric"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "yapf>=0.32.0",
    "toml>=0.10.2",
]

[tool.pdm.scripts]
_.env_file = ".env"
format = "yapf -rpi -vv ."
check_format = "yapf -rpd ."

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project.entry-points.pdm]
pdm_fabric = "pdm_fabric.main:reg_commands"